[package]
name = "iss-notify"
version = "0.1.0"
authors = ["lakshayg <lakshayg@outlook.in>"]

[dependencies]
blinkt = "0.5.0"
chrono = "0.4"
chrono-tz = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
fern = "0.5.9"
log = "0.4.8"
regex = "1"
rss = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
