[package]
name = "iss-notify"
version = "0.1.0"
authors = ["lakshayg <lakshayg@outlook.in>"]

[dependencies]
blinkt = { version = "0.5", optional = true }
chrono = "0.4"
chrono-tz = "0.5"
ctrlc = { version = "3.1", features = ["termination"] }
fern = "0.5"
log = "0.4"
regex = "1.3"
rss = "1.8"

[features]
# By default, we assume that the binary is being built for a
# raspberry pi equipped with a Pimoroni Blinkt!. It is often
# desirable to build the binary on other machines for testing
# purposes. Since the blinkt drivers require a Rpi, iss-notify
# comes with a mock blinkt class to support such cases. To use
# the mock implementation the --no-default-features flag must
# be passed to cargo when building
default = ["blinkt"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
incremental = false
